First pass at hello voice grammer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string name="app_name">PocketSphinx Demo</string>
-    
-    <string name="kws_caption">To start demonstration say \"oh mighty computer\".</string>
-    <string name="menu_caption">Say \"digits\", \"forecast\" or \"phones\" to choose the grammar, language model or phonetic decoder example.</string>
+    <string name="app_name">Hello Voice</string>
+
+    <string name="kws_caption_foo">To start demonstration say \"oh mighty computer\".</string>
+    <string name="kws_caption">To start demonstration say \"hello voice\".</string>
+    <string name="menu_caption_foo">Say \"commands\", \"digits\", \"forecast\".</string>
     <string name="digits_caption">To try recognition of digits: say something like \"one two three four five\".</string>
     <string name="forecast_caption">To try recognition of a weather forecast like \"sunny spells on Wednesday\".</string>
     <string name="phone_caption">To try phonetic recognition say anything.</string>
+    <string name="commands_caption_foo">Say \"play\", \"stop\", \"forward [time]\", \"back [time]\", \"faster\", \"slower\", \"cancel\", or \"help\".</string>
+    <string name="commands_caption">Say \"play\", \"stop\", \"faster\", \"slower\", \"forward\", \"back\", \"cancel\" or \"help\".</string>
+    <string name="menu_caption">Say \"play\", \"stop\", \"faster\", \"slower\", \"cancel\", or \"help\".</string>
 </resources>
