--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">Thumbjive - Hello Voice</string>
 
     <string name="kws_caption">To start say \"hello voice\".</string>
-    <string name="commands_caption">Say \"play\", \"stop\", \"forward [time]\", \"back [time]\", \"faster\", \"slower\", \"cancel\", or \"help\".</string>
+    <string name="commands_caption">Say: play, stop, faster, slower,\n   go forward [time],\n go back [time],\n   start session [numbers],\n   end session [number],\n   start feedback, end feedback,\n   help, cancel, exit</string>
 
     <string name="kws_caption_foo">To start demonstration say \"oh mighty computer\".</string>
     <string name="menu_caption_old">Say \"commands\", \"digits\", \"forecast\".</string>
